--- a/app/views/recruits/index.html.erb
+++ b/app/views/recruits/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Recruits#index</h1>
-<p>Find me in app/views/recruits/index.html.erb</p>
+<h1>My Recruits</h1>
+<ul>
+  <% @recruits.each do |recruit| %>
+    <li>
+      <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %> - <%= recruit.athlete.grad_year %>
+    </li>
+  <% end %>
+</ul>
