added s to calendar in index

--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Calendars</h1>
 <ul>
-  <% @calendar.each do |calendar| %>
+  <% @calendars.each do |calendar| %>
     <li> <%= calendar %> </li>
   <% end %>
 </ul>
