FEAT: Added SearchBar HTML Partial

--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -1,13 +1,13 @@
 <h1>ATHLETES WORLD RANKINGS</h1>
 
 <table>
-  <!-- <thead>
+  <thead>
     <tr>
-      <th>This is where my searbar is about to go</th>
-      <th>User</th>
-      <th colspan="3"></th>
+      <div class='d-flex input-group-prepend w-100 flex-grow-1'>
+      <%= render 'shared/search' %>
+      </div>
     </tr>
-  </thead> -->
+  </thead>
 
   <tbody>
     <% @athletes.each do |athlete| %>
