FEAT: Added Search Bar To Index Page

--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= athlete.team_url %></td>
         <td><%= athlete.rating %></td>
         <td><%= link_to 'Show', athlete %></td>
-        <td><%#= link_to '➕', () %></td>
+        <!-- <td> --><%#= link_to '➕', () %><!-- </td> -->
       </tr>
     <% end %>
   </tbody>
