home page information

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,166 @@
-<%= render 'shared/banner' %>
+
+<!-- ***** Wellcome Area Start ***** -->
+    <section class="wellcome_area clearfix" id="home">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 col-md">
+                    <div class="wellcome-heading">
+                        <h2>Recruit Up</h2>
+                        <p>Recruiting made efficient!</p>
+                    </div>
+                    <div class="get-start-area">
+                        <!-- Form Start -->
+                        <form action="#" method="post" class="form-inline">
+                            <input type="email" class="form-control email" placeholder="name@company.com">
+                            <input type="submit" class="submit" value="Get Started">
+                        </form>
+                        <!-- Form End -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Welcome thumb -->
+        <div class="welcome-thumb wow fadeInDown" data-wow-delay="0.5s">
+            <%=image_tag("file:///Users/rachaelhakim/Downloads/undraw_Booking_re_gw4j.svg", alt: "")%>
+
+        </div>
+    </section>
+    <!-- ***** Wellcome Area End ***** -->
+
+    <!-- ***** Special Area Start ***** -->
+    <section class="special-area gradient-bck section_padding_100" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <!-- Section Heading Area -->
+                    <div class="section-heading text-center">
+                        <h2> Make the most of your time</h2>
+                        <div class="line-shape"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Single Special Area -->
+                <div class="col-12 col-md-4">
+                    <div class="single-special text-center wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="single-icon">
+                            <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>
+                        </div>
+                        <h4>See your Calendar options</h4>
+                        <p>Pick the one that fits you the best</p>
+                    </div>
+                </div>
+                <!-- Single Special Area -->
+                <div class="col-12 col-md-4">
+                    <div class="single-special text-center wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="single-icon">
+                            <i class="fa fa-briefcase" aria-hidden="true"></i>
+                        </div>
+                        <h4>Orgainize your recruiting trips!</h4>
+                        <p>Take notes on your recruits!</p>
+                    </div>
+                </div>
+                <!-- Single Special Area -->
+                <div class="col-12 col-md-4">
+                    <div class="single-special text-center wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="single-icon">
+                            <i class="fa fa-credit-card" aria-hidden="true"></i>
+                        </div>
+                        <h4>Able to see your calendar from anywhere</h4>
+                        <p>Plus, talk to your coaches!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+ <!-- Special Description Area -->
+        <div class="special_description_area mt-150">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="special_description_img">
+                        <%=image_tag("/Users/rachaelhakim/Downloads/undraw_date_picker_gorr.svg", alt: "")%>
+
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="special_description_content">
+                            <h2>Allows you to create your recruiting schedule with ease!</h2>
+                            <p> You put in your players and we will do the work for you. No need to search thousands of websites trying to find out date, times, and locations of your top recruits. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ***** Special Area End ***** -->
+     <!-- ***** Awesome Features Start ***** -->
+    <section class="awesome-feature-area bg-white section_padding_0_50 clearfix" id="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <!-- Heading Text -->
+                    <div class="section-heading text-center">
+                        <h2>Why Recruit Up?</h2>
+                        <div class="line-shape"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- Single Feature Start -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <h5>Generate Calendars</h5>
+                        <p> We generate a calendars for you based on your recruits. You then select which calendar works best for you. You are then able to schedule personal days within your calendar. </p>
+                    </div>
+                </div>
+                <!-- Single Feature Start -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature">
+                        <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                        <h5>Easy Communication with your other coaches</h5>
+                        <p>The head coach is able to assign events on the calendar to other coaches on the team. </p>
+                    </div>
+                </div>
+                <!-- Single Feature Start -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature">
+                        <i class="fa fa-credit-card" aria-hidden="true"></i>
+                        <h5>Orgainizes your recruits</h5>
+                        <p>From each event, you are able to write notes on each player. Those notes can be viewed by all coaches. </p>
+                    </div>
+                </div>
+
+                <!-- Single Feature Start -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature">
+                        <i class="fa fa-lock" aria-hidden="true"></i>
+                        <h5>View individual players</h5>
+                        <p>You are able to see their current rating, the team the are on, and any notes that you may have taken about them. </p>
+                    </div>
+                </div>
+                <!-- Single Feature Start -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature">
+                        <i class="fa fa-bitcoin" aria-hidden="true"></i>
+                        <h5>View Individual Events</h5>
+                        <p> Each event you will be able to see what recruits will be at that event, what coach is attending, the location, and time</p>
+                    </div>
+                </div>
+                <!-- Single Feature Start -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature">
+                        <i class="fa fa-headphones" aria-hidden="true"></i>
+                        <h5>Customizable Calendar</h5>
+                        <p>You are able to change the days that you are available in your calendar.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+
+
