FEAT: added images and styling to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
         </div>
         <!-- Welcome thumb -->
         <div class="welcome-thumb wow fadeInDown" data-wow-delay="0.5s">
-            <%=image_tag("file:///Users/rachaelhakim/Downloads/undraw_Booking_re_gw4j.svg", alt: "")%>
+            <%= image_tag("calendar.png", alt: "This is a calendar")%>
 
         </div>
     </section>
@@ -78,7 +78,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="special_description_img">
-                        <%=image_tag("/Users/rachaelhakim/Downloads/undraw_date_picker_gorr.svg", alt: "")%>
+                        <%= image_tag("pick.png", alt: "A picture of someone picking a calendar")%>
 
                         </div>
                     </div>
