FEAT: added styling to home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -294,14 +294,98 @@ p {
     padding: 0 4%;
 }
 
+.menu_area .navbar-brand {
+    font-size: 72px;
+    font-weight: 700;
+    color: #fff;
+    margin: 0;
+    line-height: 1;
+    padding: 0;
+}
 
-.header_area {
-    left: 0;
-    position: absolute;
-    width: 100%;
-    z-index: 99;
+
+.menu_area .navbar-brand:hover,
+.menu_area .navbar-brand:focus {
+    color: #fff;
+}
+
+
+.menu_area {
+    position: relative;
+    z-index: 2;
+}
+
+.menu_area #nav .nav-link {
+    color: #fff;
+    display: block;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 30px;
+    -webkit-transition-duration: 500ms;
+    -o-transition-duration: 500ms;
+    transition-duration: 500ms;
+    padding: 35px 15px;
+}
+
+
+.menu_area nav ul li > a:hover {
+    color: #fb397d;
+}
+
+.sign-up-button {
+    text-align: right;
+}
+
+.sign-up-button > a {
+    color: #fff;
+    font-weight: 500;
+    display: inline-block;
+    border: 2px solid #a883e9;
+    height: 50px;
+    min-width: 178px;
+    line-height: 46px;
+    text-align: center;
+    border-radius: 0px 24px 0px 24px;
+}
+
+.sign-up-button > a:hover {
+    background: #fb397d;
+    color: #fff;
+    border-color: transparent;
+    -webkit-transition-duration: 500ms;
+    -o-transition-duration: 500ms;
+    transition-duration: 500ms;
+}
+
+.header_area.sticky {
+    background-color: #fff;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.05), 0 0 0 1px rgba(0,0,0,.05);
+    height: 70px;
+    position: fixed;
     top: 0;
-    padding: 0 4%;
+    z-index: 99;
+}
+.header_area.sticky .menu_area #nav .nav-link{
+  color: #726DF1;
+}
+.header_area.sticky .menu_area .navbar-brand{
+      color: #726DF1;
+}
+.header_area.sticky .sing-up-button > a{
+  color: #FB397D;
+}
+.header_area.sticky .sing-up-button > a:hover{
+  color: #fff;
+}
+.header_area.sticky .menu_area .navbar-brand {
+    font-size: 50px;
+}
+
+.header_area.sticky .menu_area #nav .nav-link {
+    padding: 23px 15px;
+}
+.header_area.sticky .navbar {
+    padding: 0;
 }
 
 .wellcome_area {
