--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 
 <!-- ***** Wellcome Area Start ***** -->
-    <section class="wellcome_area clearfix" id="home">
+    <section class="welcome_area clearfix" id="home">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 col-md">
-                    <div class="wellcome-heading">
+                    <div class="welcome-heading">
                         <h2>Recruit Up</h2>
                         <p>Recruiting made efficient!</p>
                     </div>
@@ -93,7 +93,7 @@
         </div>
     </section>
     <!-- ***** Special Area End ***** -->
-     <!-- ***** Awesome Features Start ***** -->
+     <!-- ***** Reasons For RecruitUp ***** -->
     <section class="awesome-feature-area bg-white section_padding_0_50 clearfix" id="features">
         <div class="container">
             <div class="row">
@@ -110,7 +110,7 @@
                 <!-- Single Feature Start -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-feature">
-                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <i class="far fa-calendar-alt" aria-hidden="true"></i>
                         <h5>Generate Calendars</h5>
                         <p> We generate a calendars for you based on your recruits. You then select which calendar works best for you. You are then able to schedule personal days within your calendar. </p>
                     </div>
@@ -118,7 +118,7 @@
                 <!-- Single Feature Start -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-feature">
-                        <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                        <i class="fas fa-comments" aria-hidden="true"></i>
                         <h5>Easy Communication with your other coaches</h5>
                         <p>The head coach is able to assign events on the calendar to other coaches on the team. </p>
                     </div>
@@ -126,7 +126,7 @@
                 <!-- Single Feature Start -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-feature">
-                        <i class="fa fa-credit-card" aria-hidden="true"></i>
+                        <i class="fas fa-users" aria-hidden="true"></i>
                         <h5>Orgainizes your recruits</h5>
                         <p>From each event, you are able to write notes on each player. Those notes can be viewed by all coaches. </p>
                     </div>
@@ -135,7 +135,7 @@
                 <!-- Single Feature Start -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-feature">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
+                        <i class="fas fa-user" aria-hidden="true"></i>
                         <h5>View individual players</h5>
                         <p>You are able to see their current rating, the team the are on, and any notes that you may have taken about them. </p>
                     </div>
@@ -143,7 +143,7 @@
                 <!-- Single Feature Start -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-feature">
-                        <i class="fa fa-bitcoin" aria-hidden="true"></i>
+                        <i class="fas fa-calendar-day" aria-hidden="true"></i>
                         <h5>View Individual Events</h5>
                         <p> Each event you will be able to see what recruits will be at that event, what coach is attending, the location, and time</p>
                     </div>
@@ -151,7 +151,7 @@
                 <!-- Single Feature Start -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-feature">
-                        <i class="fa fa-headphones" aria-hidden="true"></i>
+                        <i class="far fa-calendar-plus" aria-hidden="true"></i>
                         <h5>Customizable Calendar</h5>
                         <p>You are able to change the days that you are available in your calendar.</p>
                     </div>
@@ -160,7 +160,4 @@
 
         </div>
     </section>
-
-
-
-
+       <%= render 'shared/ourteam' %>
