FEAT: added color scheme to assets/stylesheets/config/_colors.scss file

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #167FFB;
-$yellow: #FFC65A;
+$red: #F78888;
+$blue: #5DA2D5;
+$yellow: #F3D250;
 $orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$green: #adce74;
+$gray: #707070;
+$light-gray: #ECECEC;
