FEAT: centered person cards, moved image to the right, added color to title

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-
 <!-- ***** Wellcome Area Start ***** -->
     <section class="welcome_area clearfix" id="home">
         <div class="container h-100">
@@ -6,24 +5,23 @@
                 <div class="col-12 col-md">
                     <div class="welcome-heading">
                         <h2>Recruit Up</h2>
-                        <p>Recruiting made efficient!</p>
+                        <h4>Recruiting made efficient!</h4>
                     </div>
                     <div class="get-start-area">
                         <!-- Form Start -->
                         <form action="#" method="post" class="form-inline">
                             <input type="email" class="form-control email" placeholder="name@company.com">
-                            <input type="submit" class="submit" value="Get Started">
+                            <input type="submit" class="btn btn-info" value="Get Started">
                         </form>
                         <!-- Form End -->
+                    </div>
+                    <div class="image_tag">
+                      <%= image_tag("calendar.png", alt: "This is a calendar")%>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Welcome thumb -->
-        <div class="welcome-thumb wow fadeInDown" data-wow-delay="0.5s">
-            <%= image_tag("calendar.png", alt: "This is a calendar")%>
-
-        </div>
     </section>
     <!-- ***** Wellcome Area End ***** -->
 
