--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,6 +17,11 @@ h6 {
     line-height: 1.2;
 }
 
+.image_tag {
+  width: 400px;
+  float: right;
+}
+
 .section_padding_100 {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -345,7 +350,7 @@ p {
 
 .welcome_area {
     background-image: image-url("bg-img/welcome-bg.png");
-    height: 900px;
+    height: 500px;
     position: relative;
     z-index: 1;
     background-position: bottom center;
@@ -378,7 +383,7 @@ p {
 
 .welcome-heading > h2 {
     font-size: 100px;
-    color: #ffffff;
+    color: #120078;
     font-weight: 700;
     position: relative;
     z-index: 3;
