--- a/app/views/shared/_ourteam.html.erb
+++ b/app/views/shared/_ourteam.html.erb
@@ -10,7 +10,7 @@
             </div>
           </div>
         </div>
-        <div class="row p-100px">
+        <div class="row" style="justify-content: space-between;">
           <div class="col-12 col-md-4 col-lg-3">
             <div class="single-team-member">
               <div class="member-image">
