--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,18 +5,18 @@
                 <div class="col-12 col-md">
                     <div class="welcome-heading">
                         <h2>Recruit Up</h2>
-                        <h4>Recruiting made efficient!</h4>
+                        <h4 class="text-align">Recruiting made efficient!</h4>
                     </div>
                     <div class="get-start-area">
                         <!-- Form Start -->
                         <form action="#" method="post" class="form-inline">
-                            <input type="email" class="form-control email" placeholder="name@company.com">
-                            <input type="submit" class="btn btn-info" value="Get Started">
+                            <input type="email" class="form-control email" style="margin-right: 16px;" placeholder="name@company.com">
+                            <input type="submit" class="btn btn-warning" value="Get Started" style= "border-radius: 4px;">
                         </form>
                         <!-- Form End -->
                     </div>
                     <div class="image_tag">
-                      <%= image_tag("calendar.png", alt: "This is a calendar")%>
+                      <%= image_tag("calendar.png", alt: "calendar")%>
                     </div>
                 </div>
             </div>
