--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,11 +1,14 @@
-<%= month_calendar(events: @events) do |date, @events| %>
+<%= month_calendar(attribute: :start_date, events: @events) do |date, events| %>
   <%= date %>
 
   <% events.each do |event| %>
     <div>
       <%= event.start_date %>
       <%= event.start_time %>
-      <%= event.athletes %>
+      <% event.athletes.each do |athlete| %>
+        <%= athlete.first_name %> <%= athlete.last_name %>
+        <%= athlete.grad_year %>
+      <% end %>
     </div>
   <% end %>
 <% end %>
