FEAT: changed line height for paragraphs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -82,8 +82,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="special_description_content">
-                            <h2>Allows you to create your recruiting schedule with ease!</h2>
-                            <p> You put in your players and we will do the work for you. No need to search thousands of websites trying to find out date, times, and locations of your top recruits. </p>
+                            <h1>Allows you to create your recruiting schedule with ease!</h1>
+                            <p style="margin: 16px;"> You put in your players and we will do the work for you. No need to search thousands of websites trying to find out date, times, and locations of your top recruits. </p>
                         </div>
                     </div>
                 </div>
