--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,28 +1,14 @@
 <!-- ***** Wellcome Area Start ***** -->
-    <section class="welcome_area clearfix" id="home">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12 col-md">
-                    <div class="welcome-heading">
-                        <h2>Recruit Up</h2>
-                        <h4 class="text-align">Recruiting made efficient!</h4>
-                    </div>
-                    <div class="get-start-area">
-                        <!-- Form Start -->
-                        <form action="#" method="post" class="form-inline">
-                            <input type="email" class="form-control email" style="margin-right: 16px;" placeholder="name@company.com">
-                            <input type="submit" class="btn btn-warning" value="Get Started" style= "border-radius: 4px;">
-                        </form>
-                        <!-- Form End -->
-                    </div>
-                    <div class="image_tag">
-                      <%= image_tag("calendar.png", alt: "calendar")%>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Welcome thumb -->
-    </section>
+   <div class="banner">
+      <div class="banner-info welcome-heading">
+        <h2>Recruit Up</h2>
+        <h4 class="text-align">Recruiting made efficient!</h4>
+        <%= link_to "Get Started", new_user_registration_path, class: "btn btn-warning" %>
+      </div>
+      <div class="image_tag">
+        <%= image_tag("calendar.png", alt: "calendar")%>
+      </div>
+   </div>
     <!-- ***** Wellcome Area End ***** -->
 
     <!-- ***** Special Area Start ***** -->
