--- a/app/views/recruits/index.html.erb
+++ b/app/views/recruits/index.html.erb
@@ -1,11 +1,32 @@
-<h1>My Recruits</h1>
-  <div class='d-flex input-group-prepend w-100 flex-grow-1'>
-      <%= render 'shared/search' %>
-  </div>
-<ul>
-  <% @recruits.each do |recruit| %>
-    <li>
-      <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %> - <%= recruit.athlete.grad_year %>
-    </li>
-  <% end %>
-</ul>
+
+
+  <h1>My Recruits</h1>
+
+    <div class='input-group-prepend w-100'>
+        <%= render 'shared/search' %>
+    </div>
+
+    <div>
+
+    <ul class="list-group">
+        <% @recruits.each do |recruit| %>
+          <% if recruit.athlete.grad_year == 2022 %>
+            <li class="list-group-item list-group-item-action list-group-item-danger">
+              <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %> - <%= recruit.athlete.grad_year %>
+            </li>
+          <% elsif recruit.athlete.grad_year == 2023 %>
+            <li class="list-group-item list-group-item-action list-group-item-primary">
+              <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %> - <%= recruit.athlete.grad_year %>
+            </li>
+          <% elsif recruit.athlete.grad_year == 2024 %>
+            <li class="list-group-item list-group-item-action list-group-item-info">
+              <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %> - <%= recruit.athlete.grad_year %>
+            </li>
+          <% else %>
+            <li class="list-group-item list-group-item-action list-group-item-success">
+              <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %> - <%= recruit.athlete.grad_year %>
+            </li>
+          <% end %>
+        <% end %>
+    </ul>
+    </div>
