--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -12,7 +12,8 @@
 
 
 $body-font: 'Oswald', "sans-serif";
-$headers-font: 'Lobster', "cursive";
+$h1-font: 'Lobster', "cursive";
+$headers-font: 'Bebas Neue', cursive;
 
 
 // Alternative fonts
