--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -76,9 +76,9 @@ p {
     padding-bottom: 50px;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
+svg {
+  width: 360px;
+  height: 300px;
 }
 
 .mt-15 {
@@ -296,7 +296,7 @@ p {
     color: #fff;
     font-weight: 500;
     display: inline-block;
-    border: 2px solid #a883e9;
+    border: 2px solid #290001;
     height: 50px;
     min-width: 178px;
     line-height: 46px;
@@ -347,8 +347,9 @@ p {
 }
 
 .welcome_area {
-    background-image: image-url("bg-img/welcome-bg.png");
-    height: 500px;
+    background-image: linear-gradient(#904f214a,rgba(0,0,0,0.31)), url("https://images.unsplash.com/photo-1595735927257-c45301611ef9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+    // https://images.unsplash.com/photo-1574589086107-5c12f84418a0?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2250&q=80
+    height: 550px;
     position: relative;
     z-index: 1;
     background-position: bottom center;
@@ -384,13 +385,104 @@ p {
   h1 {
     margin-top: 20px;
     font-size: 130px;
-    color: #aa4a30;
+    color: #ec823a;
     font-weight: 700;
     position: relative;
     z-index: 3;
+    text-shadow: 0 0 5px #4a3f35;
   }
 
   h4 {
     font-size: 40px;
+    color: #e8e4e1;
+    text-shadow: 0 0 5px #f9c49a;
   }
+}
+
+
+
+
+
+// --------------
+// single-special
+// --------------
+
+.single-icon > i {
+    font-size: 36px;
+    color: #2f2519;
+}
+
+.single-special > h4 {
+    font-size: 22px;
+    color: #aa4a30;
+}
+
+.single-icon {
+    margin-bottom: 25px;
+}
+
+.single-special > h4 {
+    font-size: 22px;
+    color: #aa4a30;
+    margin-bottom: 15px;
+}
+
+.single-special {
+  background: #fff5ea;
+    box-shadow: 0 2px 2px 0 #f1e3cb, 0 0 0 1px #f1e3cb;
+
+    padding: 40px;
+    border-radius: 40px 40px 40px 0px;
+    -webkit-transition-duration: 800ms;
+    -o-transition-duration: 800ms;
+    transition-duration: 800ms;
+    margin-bottom: 30px;
+}
+
+.special_description_content > h2 {
+    color: #edcfa9;
+    font-size: 48px;
+    margin-bottom: 30px;
+}
+
+.single-special:hover {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+}
+
+.single-special p {
+    margin-bottom: 0;
+}
+
+
+
+
+
+// --------------
+// single-feature
+// --------------
+
+.single-feature {
+    margin-bottom: 50px;
+}
+
+.single-feature > p {
+    margin-bottom: 0;
+}
+
+.single-feature > i {
+    color: #edcfa9;
+    font-size: 30px;
+    display: inline-block;
+    float: left;
+    margin-right: 10px;
+}
+
+.single-feature > h5 {
+    font-size: 22px;
+    color: #aa4a30;
+}
+
+.single-feature > p {
+    margin-top: 15px;
 }
