--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,8 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
-
-    <div class="container">
+<!--     <%#= render 'shared/flashes' %> -->
       <%= yield %>
-    </div>
-
     <%= render 'shared/footer' %>
   </body>
 </html>
