--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,3 +6,6 @@
 @import "footer";
 @import "buttons";
 @import "ourteam";
+@import "sidenav";
+@import "group_avatars";
+// @import "simple_calendar";
