--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,31 +1,99 @@
-<div class="header bg-primary pb-6">
-  <div class="container-fluid">
-    <div class="header-body">
-      <%= render partial: 'pages/header', locals: {
-            icon: 'home',
-            breadcrumb_1: 'Dashboards',
-            breadcrumb_2: 'Default'
-      } %>
-      <%= render 'pages/dashboard/metrics_summary' %>
-    </div>
-  </div>
+<div class="wrapper">
+<div id='sidebar'>
+   <%= render 'sidenav' %>
 </div>
-<div class="container-fluid mt--6">
+<div class="tab-content container-fluid mt--6" id="myTabContent">
+  <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
+
   <div class="row">
-    <div class="col-xl-8">
-      <%= render 'pages/dashboard/charts/sales' %>
+  <div class="col-xl-1">
+      <%#= render 'events/events_index' %>
     </div>
-    <div class="col-xl-4">
-      <%= render 'pages/dashboard/charts/orders' %>
+    <div class="col-xl-10">
+      <%= render 'events/month' %>
+    </div>
+    <div class="col-xl-1">
+      <%#= render 'events/events_index' %>
     </div>
   </div>
   <div class="row">
     <div class="col-xl-8">
-      <%= render 'pages/dashboard/tables/page_visits' %>
+      <%= render 'metrics_summary' %>
     </div>
     <div class="col-xl-4">
-      <%= render 'pages/dashboard/tables/social_traffic' %>
+      <%#= render 'pages/dashboard/tables/social_traffic' %>
     </div>
   </div>
-  <%= render 'pages/footer' %>
+  </div>
+
+  <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+
+  <div class="row">
+  <div class="col-xl-1">
+      <%#= render 'events/events_index' %>
+    </div>
+    <div class="col-xl-10">
+      <%= render 'events/month' %>
+    </div>
+    <div class="col-xl-1">
+      <%#= render 'events/events_index' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xl-8">
+
+    </div>
+    <div class="col-xl-4">
+      <%#= render 'pages/dashboard/tables/social_traffic' %>
+    </div>
+  </div>
+  </div>
+
+  <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab">
+
+  <div class="row">
+  <div class="col-xl-1">
+      <%#= render 'events/events_index' %>
+    </div>
+    <div class="col-xl-10">
+
+    </div>
+    <div class="col-xl-1">
+      <%#= render 'events/events_index' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xl-8">
+
+    </div>
+    <div class="col-xl-4">
+      <%#= render 'pages/dashboard/tables/social_traffic' %>
+    </div>
+  </div>
+  </div>
+
+  <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+
+  <div class="row">
+  <div class="col-xl-1">
+      <%#= render 'events/events_index' %>
+    </div>
+    <div class="col-xl-10">
+
+    </div>
+    <div class="col-xl-1">
+      <%#= render 'events/events_index' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xl-8">
+      <%= render 'metrics_summary' %>
+    </div>
+    <div class="col-xl-4">
+      <%#= render 'pages/dashboard/tables/social_traffic' %>
+    </div>
+  </div>
+  </div>
+  <%#= render 'pages/footer' %>
+</div>
 </div>
