--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,8 @@
 <% end %>
 
 <!-- ***** Welcome Area Start ***** -->
-<section class="welcome_area clearfix" id="home">
-  <div class=" container h-100">
+<section class="welcome_area clearfix vh-100" id="home">
+  <div class="container vh-100">
       <div class="row h-100 align-items-center">
           <div class="col-12 col-md">
               <div class="welcome-heading">
